Fixed a potential security risk that would accept checkout forms being submitted from an unsecured connection (i568) Fixed searching issues using keywords with accented characters (i540) Minor tweaks to admin UI styles to keep hidden elements hidden by CSS until needed and enabled by JS (to prevent element "flashing") Minor fix to unstocking items method ensuring stock can not be reduced below 0 Fixed a problem with custom order data not being properly escaped (i525) Fixed issues with the section-list tag creating improperly nested unordered lists Fixed issues with broken  product ordering in the smart categories Fixed a problem with disabling catalog-based promotions not removing the promotional prices in the catalog (i543) Fixed an issue causing XML errors with handling shipping options with no label supplied in Google Checkout Fixed inventory handling in Google Checkout Shipping handling is now required in PayPal Express for the GB locale Added a promotion limit setting and functionality (i542) Added support for a 'linkall' option in the category-list tag (i538) Added the shopp('purchase','item-input-list') tag (i569) Added support for including taxes in variation prices Added support for a Related Products smart category (i541) Added payment gateway loader method to Shopp Added support for WordPress 2.8 Widget API Added a product widget, removing the old related.php template and replacing it with sideproduct.php (i544) Added a product widget, removing the old related.php template and replacing it with sideproduct.php (i544) Added shopp_download_request action hook
git-svn-id: file:///Users/jond/svngit/svnrepos/shopp/trunk@385 846ab242-8549-0410-9a75-dfdbdae9473e

--- a/core/ui/styles/admin.css
+++ b/core/ui/styles/admin.css
@@ -280,7 +280,7 @@ p.controls { position: absolute; top: 0; right: 0; margin: 0; }
 #debug.shopp h3 { font: bold 15px/1 "Lucida Grande",monospace;  }
 
 /** Calendar **/
-
+.calendar { display: none; }
 .calendar-wrap { display: inline; position: relative; overflow: visible; }
 .calendar { position: absolute; z-index: 10; top: 18px; left: 0; width: 185px; background: white; border: 1px solid #cee1ef; padding: 5px; font-size: 11px; }
 .calendar h3 { width: 100%; margin: 0; text-align: center; }
